中英文介面修改 , order_menu RWD畫面修改完成

--- a/app/views/desks/edit.html.erb
+++ b/app/views/desks/edit.html.erb
@@ -1,2 +1,2 @@
-<h1>desks#edit</h1>
+<h1 class="py-10 mt-12 font-mono text-5xl font-bold text-center">編輯桌位</h1>
 <%= render "form", store: @desk.store, desk: @desk %>
