--- a/app/views/stores/new.html.erb
+++ b/app/views/stores/new.html.erb
@@ -1,6 +1,6 @@
-<%= render "shared/storenavbar", store: @store %>
 
-<h1 class="mt-12 py-10 font-mono text-5xl font-bold text-center">Add Store</h1>
+
+<h1 class="mt-12 py-10 font-mono text-5xl font-bold text-center">新增商店</h1>
 
 <%= render "shared/storeform", store: @store %>
 
