--- a/app/views/classifications/new.html.erb
+++ b/app/views/classifications/new.html.erb
@@ -1,6 +1,6 @@
-<%= render "shared/menunavbar" %>
 
-<h1 class="py-10 mt-12 font-mono text-5xl font-bold text-center">Add Classification</h1>
+
+<h1 class="py-10 mt-12 font-mono text-5xl font-bold text-center">新增分類</h1>
 
 <%= render "form", store: @store, classification: @classification %>
 
