--- a/app/views/desks/show.html.erb
+++ b/app/views/desks/show.html.erb
@@ -1,17 +1,17 @@
-<div class></div>
-<div class="flex flex-col items-center justify-center w-screen h-screen bg-green-500 " >
-  <h1 class="mb-2 text-5xl "> 掃 碼 點 餐 </h1>
-  <h2 class="mb-6 text-3xl "> 免等待 餐更快 </h2>
+<div class="flex flex-col items-center justify-center w-screen h-screen bg-maingray " >
+  <h1 class="mb-2 text-5xl text-mainorange "> 掃 碼 點 餐 </h1>
+  <h2 class="mb-6 text-3xl text-mainorange "> 免等待 餐更快 </h2>
   <div
-    class="h-auto max-w-sm p-5 mx-auto text-center transition duration-700 ease-out bg-white border border-gray-200 shadow-md rounded-xl dark:bg-gray-800 dark:border-gray-700 hover:scale-110">
-    <div class="">
+    class="p-5 mx-auto text-center transition duration-700 ease-out bg-white border border-gray-200 shadow-md rounded-xl dark:bg-gray-800 dark:border-gray-700">
+    <div class="w-full ">
       <%= @qrcode %>
     </div>
     <div class="p-5">
-      <h5 class="mb-5 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"><%= @store.name %>
+      <h5 class="mb-5 text-2xl text-mainorange  font-bold tracking-tight text-gray-900 dark:text-white">
+        <%= @store.name %>
       </h5>
       <button
-        class="inline-flex items-center px-3 py-3 text-sm font-medium text-center text-white rounded-lg bg-tiffany hover:bg-blue-600 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 no-print"
+        class="inline-flex items-center px-3 py-3 text-sm font-medium text-center   text-maingray rounded-lg  bg-mainorange hover:bg-maingray  hover:text-mainorange focus:ring-4 focus:outline-none focus:ring-blue-300 no-print"
         onclick="window.print()">
         列印 QRCode
         <svg aria-hidden="true" class="w-4 h-4 ml-2 -mr-1" fill="currentColor" viewBox="0 0 20 20"
