--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 
-<h1 class="py-10 font-mono text-5xl font-bold text-center">Sign up</h1>
+<h1 class="py-10 font-mono text-5xl font-bold text-center">註冊</h1>
 
 <section class="max-w-xl mx-auto bg-gray-100 rounded-md shadow-md dark:bg-gray-800">
 <div class="h-4 bg-green-400 rounded-t-md w-full"></div>
@@ -12,21 +12,21 @@
       </div>
 
       <div class="field">
-        <%= f.label :email, class:"text-block dark:text-gray-200" %><br />
+        <%= f.label :"電子信箱", class:"text-block dark:text-gray-200" %><br />
         <%= f.email_field :email, autofocus: true, autocomplete: "email" ,class:"block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring"%>
       </div>
       
 
       <div class="field">
-        <%= f.label :password ,class:"text-block dark:text-gray-200" %>
+        <%= f.label :"密碼" ,class:"text-block dark:text-gray-200" %>
         <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <p class="inline-block">(請至少輸入<%= @minimum_password_length %> 位數密碼)</p>
         <% end %><br />
         <%= f.password_field :password, autocomplete: "new-password" ,class:"block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring" %>
       </div>
 
       <div class="field">
-        <%= f.label :password_confirmation ,class:"text-block dark:text-gray-200" %><br />
+        <%= f.label :"在輸入一次密碼" ,class:"text-block dark:text-gray-200" %><br />
         <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring"%>
       </div>
       
