--- a/app/views/menus/order_food.html.erb
+++ b/app/views/menus/order_food.html.erb
@@ -2,7 +2,7 @@
   <div class="flex items-center justify-between w-full  md:p-3 bg-maingray md:px-6">
     <nav class="flex w-full items-center justify-between ">
       <button class="flex items-center w-48 h-7 mr-4">
-        <img src="/photo/wechef-logo-nbg.png" class="mr-2" alt="Flowbite Logo" style="aspect-ratio:auto">
+        <img src="/photo/wechef-logo-nbg.png" class="mr-2" alt="WeChef Logo" style="aspect-ratio:auto">
       </button>
 
       <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-3 text-sm text-mainorange rounded-lg md:hidden focus:outline-none dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
