stoer_new , navbar 頁面修改跟套用

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="text-center text-white" style="background-color: #f1f1f1;">
-  <div class="container pt-9">
-    <div class="flex justify-center mb-9">
-      <a href="#!" class="text-gray-800 mr-9">
+  <div class="w-full ">
+    <div class="w-full flex justify-center py-4">
+      <a href="#" class="text-gray-800 mr-9">
         <svg
           aria-hidden="true"
           focusable="false"
@@ -107,8 +107,8 @@
   </div>
 
   <div class="p-4 text-center text-gray-700" style="background-color: rgba(0, 0, 0, 0.2);">
-    © 2021 Copyright:
-    <a class="text-gray-800" href="https://tailwind-elements.com/">Tailwind Elements</a>
+    © 2022 Copyright:
+    <a class="text-gray-800" href="#">WeChef 後台系統新選擇</a>
   </div>
 </footer>
 
