--- a/app/views/menus/edit.html.erb
+++ b/app/views/menus/edit.html.erb
@@ -1,5 +1,3 @@
-<%# <%= render "shared/menunavbar" %>
-
 <h1 class="py-10 mt-12 font-mono text-5xl font-bold text-center">修改菜單</h1>
 
-<%= render "shared/menuform" , store: @menu.store , menu: @menu %>
+<%= render "form" , store: @menu.store , menu: @menu %>
