--- a/app/views/menus/new.html.erb
+++ b/app/views/menus/new.html.erb
@@ -1,3 +1,3 @@
 <h1 class="py-10 mt-12 font-mono text-5xl font-bold text-center">新增菜單</h1>
 
-<%= render "shared/menuform" , store: @store,menu: @menu %>
+<%= render "form" , store: @store,menu: @menu %>
