--- a/app/views/stores/edit.html.erb
+++ b/app/views/stores/edit.html.erb
@@ -1,5 +1,3 @@
+<h1 class="mt-12 py-10 font-mono text-5xl font-bold text-center">編輯商店</h1>
 
-
-<h1 class="mt-12 py-10 font-mono text-5xl font-bold text-center">修改商店</h1>
-
-<%= render "shared/storeform", store: @store %>
+<%= render "form", store: @store %>
