--- a/app/views/stores/new.html.erb
+++ b/app/views/stores/new.html.erb
@@ -1,6 +1,9 @@
-
-
-<h1 class="mt-12 py-10 font-mono text-5xl font-bold text-center">新增商店</h1>
-
-<%= render "shared/storeform", store: @store %>
+<div class="h-full">
+  <div class="text-center pt-5">
+    <h2 class="text-3xl font-bold text-maingray">新增店家頁面</h2>
+    <span class="text-md text-maingray">Welcome Wechef</span>
+  </div>
+  
+  <%= render "form", store: @store %>
+</div>
 
