新增桌位頁面更新

--- a/app/views/desks/new.html.erb
+++ b/app/views/desks/new.html.erb
@@ -1,2 +1,7 @@
-<h1 class="py-10 mt-12 font-mono text-5xl font-bold text-center">新增桌位</h1>
-<%= render "form", store: @store, desk: @desk %>
+<div class="h-full">
+  <div class="text-center pt-2 md:pt-5">
+    <h1 class="text-3xl font-bold text-maingray pb-2">新增桌位</h1>
+  </div>
+  <%= render "form", store: @store, desk: @desk %>
+</div>
+
