--- a/app/views/classifications/_form.html.erb
+++ b/app/views/classifications/_form.html.erb
@@ -1,22 +1,21 @@
-<section class="max-w-4xl mx-auto bg-gray-100 rounded-md shadow-md dark:bg-gray-800">
-<div class="h-3 bg-green-400 rounded-t-md"></div>
-
-  <%= form_with(model: [store, classification]) do |f| %>
-      <div class="grid grid-cols-1 gap-6 p-6 mt-4 sm:grid-cols-2">
-        <div>
-          <%= f.label :name ,'新增分類' ,class:"text-xl text-block dark:text-gray-200" %>
-          <%= f.text_field :name ,class:"block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring"%>
+<div class="flex flex-col items-center w-full md:flex-row">
+  <div class="w-full h-full max-h-screen p-4 mx-auto bg-white rounded-md md:w-1/3 md:px-8">
+    <%= form_with(model: [store, classification]) do |f| %>
+      <div class="mb-12">
+        <div class="bg-gray-300 rounded-md">
+          <%= f.label :name ,'新增分類' ,class:"block text-md font-bold text-maingray px-2 py-1 texe-center" %>
+          <%= f.text_field :name ,autofocus: true, autocomplete: "name", class:"pl-4 md:pl-0.5 px-4 w-full border-2 py-2 rounded-b-lg text-sm outline-none border-gray-300 focus:border-mainorange text-center" ,placeholder:"請輸入分類" %>
         </div>
-        
         <div class="flex justify-end mt-6">
-          <div class="flex items-center px-6 mx-2 text-white transition-colors duration-200 transform bg-pink-500 rounded-md hover:bg-pink-700 focus:outline-none focus:bg-gray-600 hover:scale-105">
+          <div class="mt-4 mb-3 w-full bg-gray-300 text-maingray mr-2 py-2 rounded-md transition duration-100 hover:bg-gray-200 text-center ">
             <%= link_to '回分類' ,store_classifications_path %>
           </div>
 
-          <div class="flex items-center px-6 mx-2 text-white transition-colors duration-200 transform bg-pink-500 rounded-md hover:bg-pink-700 focus:outline-none focus:bg-gray-600 hover:scale-105">
+          <div class="mt-4 mb-3 w-full bg-mainorange text-white py-2 rounded-md transition duration-100 hover:bg-yellow-500 text-center">
             <%= f.submit '新增分類'%>
           </div>
         </div>
       </div>
     <% end %>
-</section>
+  </div>
+</div>
