--- a/app/views/classifications/new.html.erb
+++ b/app/views/classifications/new.html.erb
@@ -1,4 +1,8 @@
-<h1 class="py-10 mt-12 font-mono text-5xl font-bold text-center">新增分類</h1>
+<div class="h-full">
+  <div class="text-center pt-2 md:pt-5">
+    <h1 class="text-3xl font-bold text-maingray pb-2">新增分類</h1>
+  </div>
+  <%= render "form", store: @store, classification: @classification %>
+</div>
 
-<%= render "form", store: @store, classification: @classification %>
 
