--- a/app/views/menus/_form.html.erb
+++ b/app/views/menus/_form.html.erb
@@ -1,48 +1,36 @@
-<section class="max-w-4xl mx-auto bg-gray-100 rounded-md shadow-md dark:bg-gray-800">
-  <div class="h-3 bg-green-400 rounded-t-md"></div>
-  <h1 class="text-xl px-6 pt-6 font-bold capitalize text-block dark:text-block">店家菜單新增頁面</h1>
-  <%= form_with( model: [ store , menu ] ) do |f| %>
-    <div class="grid grid-cols-1 gap-6 px-6 pb-6 mt-4 sm:grid-cols-2">
-      <div>
-        <%= f.label :name ,'菜名' ,class:"text-block dark:text-gray-200" %>
-        <%= f.text_field :name ,class:"block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300
-          rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500
-          dark:focus:border-blue-500 focus:outline-none focus:ring"%>
+<div class="flex flex-col items-center w-full md:flex-row">
+  <div class="w-full h-full max-h-screen p-4 mx-auto bg-white rounded-md md:w-1/3 md:px-8">
+    <%= form_with( model: [ store , menu ] ) do |f| %>
+    <div class="mb-12">
+      <div class="bg-gray-300 rounded-md">
+        <%= f.label :name ,'菜名' ,class:"block text-md font-bold text-maingray px-2 py-1 texe-center" %>
+        <%= f.text_field :name ,autofocus: true, autocomplete: "name", class:"pl-4 md:pl-1 px-4 w-full border-2 py-2 rounded-b-lg text-sm outline-none border-gray-300 focus:border-mainorange text-center " ,placeholder:"請輸入菜名"%>
       </div>
-
-      <div>
-        <%= f.label :price ,'單價' ,class:"text-block dark:text-gray-200"%>
-        <%= f.number_field :price ,class:"block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300
-          rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500
-          dark:focus:border-blue-500 focus:outline-none focus:ring"%>
+      <div class="my-3 bg-gray-300 rounded-md">
+        <%= f.label :price ,'單價' ,class:"block text-md font-bold text-maingray px-2 py-1"%>
+        <%= f.number_field :price ,min: 1, class:"px-4 w-full border-2 py-2 rounded-b-lg text-sm outline-none border-gray-300 focus:border-mainorange text-center" ,placeholder:"請輸入單價"%>
       </div>
-
-      <div>
-          <%= f.label :classification_id, "分類" ,class:"text-block dark:text-gray-200"%>
-          <%= f.select :classification_id, store.classifications.map{ |c| [c.name, c.id] }%>
-           <select
-          class="block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring">
-          </select>
+      <div class=" bg-gray-300 rounded-md flex text">
+        <div class="w-1/2 text-center flex flex-col">
+          <div class=""><%= f.label :classification_id, "分類" ,class:"block text-md font-bold text-maingray px-2 py-1"%>
+          </div>
+          <div class="flex flex-col w-2/3 m-auto justify-center bg-white rounded-sm">
+            <%= f.select :classification_id, store.classifications.map{ |c| [c.name, c.id] } %></div>
+          </div>
+        <div class="w-1/2 text-center">
+          <%= f.label :avatar ,"商品圖片" ,class:"block text-md font-bold text-maingray px-2 py-1"%>
+          <%= f.file_field :avatar , class:"px-4 border-2 py-2 w-full rounded-b-lg text-sm outline-none border-gray-300 focus:border-mainorange" %> 
+        </div>
       </div>
-
-      <div>
-        <%= f.label :avatar ,"商品圖片" ,class:"text-block dark:text-gray-200"%>
-        <%= f.file_field :avatar , class:"w-full mt-2 py-2 leading-5 text-block transition-colors duration-200
-        transform rounded-md focus:outline-none focus:bg-gray-600 " %> 
-      </div>
-
-      <div>
-        <%= f.label :note ,'備註' , class:" text-block dark:text-gray-200"%>
-        <%= f.text_area :note ,class:"block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300
-        rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500
-        dark:focus:border-blue-500 focus:outline-none focus:ring" %>
+      <div class="my-3 bg-gray-300 rounded-md">
+        <%= f.label :note ,"備註" , class:"block text-md font-bold text-maingray px-2 py-1"%>
+        <%= f.text_area :note ,autofocus: true, autocomplete: "name", class:"pl-4 md:pl-0.5 px-4 w-full border-2 py-2 rounded-b-lg text-sm outline-none border-gray-300 focus:border-mainorange text-center", placeholder:"請輸入備註" %>
       </div>
       <div class="flex justify-end mt-6">
-        <%= f.submit '回菜單' , class:"px-6 py-2 mx-2 text-white transition-colors duration-200 transform bg-pink-500
-        rounded-md hover:bg-pink-700 focus:outline-none focus:bg-gray-600"%>
-        <%= f.submit '新增菜單' , class:"px-6 py-2 mx-2 text-white transition-colors duration-200 transform bg-pink-500
-        rounded-md hover:bg-pink-700 focus:outline-none focus:bg-gray-600"%>
+        <%= f.submit '回菜單' , class:"mt-4 mb-3 w-full bg-gray-300 text-maingray mr-2 py-2 rounded-md transition duration-100 hover:bg-gray-200 text-center "%>
+        <%= f.submit '新增菜單' , class:"mt-4 mb-3 w-full bg-mainorange text-white py-2 rounded-md transition duration-100 hover:bg-yellow-500 text-center"%>
       </div>
     </div>
     <% end %>
-</section>
+  </div>
+</div>
