--- a/app/views/menus/new.html.erb
+++ b/app/views/menus/new.html.erb
@@ -1,3 +1,6 @@
-<h1 class="py-10 mt-12 font-mono text-5xl font-bold text-center">新增菜單</h1>
-
-<%= render "form" , store: @store,menu: @menu %>
+<div class="h-full">
+  <div class="text-center pt-2 md:pt-5">
+    <h1 class="text-3xl font-bold text-maingray pb-2">新增菜單</h1>
+  </div>
+  <%= render "form" , store: @store,menu: @menu %>
+</div>
