--- a/app/views/desks/_form.html.erb
+++ b/app/views/desks/_form.html.erb
@@ -4,11 +4,11 @@
     <div class="mb-12">
       <div class="bg-gray-300 rounded-md">
         <%= f.label :name, "桌位號碼", class:"block text-md font-bold text-maingray px-2 py-1 texe-center" %>
-        <%= f.text_field :name,autofocus: true, autocomplete: "name", class:"pl-4 md:pl-0.5 px-4 w-full border-2 py-2 rounded-b-lg text-sm outline-none border-gray-300 focus:border-mainorange text-center" ,placeholder:"請輸入桌位號碼" %>
+        <%= f.text_field :name,autofocus: true, autocomplete: "name", class:"pl-4 md:pl-0.5 px-4 w-full border-2 py-2 rounded-b-lg text-md outline-none border-gray-300 focus:border-mainorange text-center" ,placeholder:"請輸入桌位號碼" %>
       </div>
       <div class="my-3 bg-gray-300 rounded-md">
         <%= f.label :seat_amount, "座位數量", class:"block text-md font-bold text-maingray px-2 py-1" %>
-        <%= f.number_field :seat_amount, min: 1, class:"px-4 w-full border-2 py-2 rounded-b-lg text-sm outline-none border-gray-300 focus:border-mainorange text-center" ,placeholder:"請輸入座位數量" %>
+        <%= f.number_field :seat_amount, min: 1, class:"px-4 w-full border-2 py-2 rounded-b-lg text-md outline-none border-gray-300 focus:border-mainorange text-center" ,placeholder:"請輸入座位數量" %>
       </div>
       <div class="flex justify-end mt-6">
         <%= f.submit '新增桌位', class:"mt-4 mb-3 w-full bg-mainorange text-white py-2 rounded-md transition duration-100 hover:bg-yellow-500 " %>
