--- a/app/views/classifications/_form.html.erb
+++ b/app/views/classifications/_form.html.erb
@@ -4,7 +4,7 @@
       <div class="mb-12">
         <div class="bg-gray-300 rounded-md">
           <%= f.label :name ,'新增分類' ,class:"block text-md font-bold text-maingray px-2 py-1 texe-center" %>
-          <%= f.text_field :name ,autofocus: true, autocomplete: "name", class:"pl-4 md:pl-0.5 px-4 w-full border-2 py-2 rounded-b-lg text-sm outline-none border-gray-300 focus:border-mainorange text-center" ,placeholder:"請輸入分類" %>
+          <%= f.text_field :name ,autofocus: true, autocomplete: "name", class:"pl-4 md:pl-0.5 px-4 w-full border-2 py-2 rounded-b-lg text-md outline-none border-gray-300 focus:border-mainorange text-center" ,placeholder:"請輸入分類" %>
         </div>
         <div class="flex justify-end mt-6">
           <div class="mt-4 mb-3 w-full bg-gray-300 text-maingray mr-2 py-2 rounded-md transition duration-100 hover:bg-gray-200 text-center ">
