--- a/app/views/menus/_form.html.erb
+++ b/app/views/menus/_form.html.erb
@@ -4,11 +4,11 @@
     <div class="mb-12">
       <div class="bg-gray-300 rounded-md">
         <%= f.label :name ,'菜名' ,class:"block text-md font-bold text-maingray px-2 py-1 texe-center" %>
-        <%= f.text_field :name ,autofocus: true, autocomplete: "name", class:"pl-4 md:pl-1 px-4 w-full border-2 py-2 rounded-b-lg text-sm outline-none border-gray-300 focus:border-mainorange text-center " ,placeholder:"請輸入菜名"%>
+        <%= f.text_field :name ,autofocus: true, autocomplete: "name", class:"pl-4 md:pl-1 px-4 w-full border-2 py-2 rounded-b-lg text-md outline-none border-gray-300 focus:border-mainorange text-center " ,placeholder:"請輸入菜名"%>
       </div>
       <div class="my-3 bg-gray-300 rounded-md">
         <%= f.label :price ,'單價' ,class:"block text-md font-bold text-maingray px-2 py-1"%>
-        <%= f.number_field :price ,min: 1, class:"px-4 w-full border-2 py-2 rounded-b-lg text-sm outline-none border-gray-300 focus:border-mainorange text-center" ,placeholder:"請輸入單價"%>
+        <%= f.number_field :price ,min: 1, class:"px-4 w-full border-2 py-2 rounded-b-lg text-md outline-none border-gray-300 focus:border-mainorange text-center" ,placeholder:"請輸入單價"%>
       </div>
       <div class=" bg-gray-300 rounded-md flex text">
         <div class="w-1/2 text-center flex flex-col">
@@ -19,12 +19,12 @@
           </div>
         <div class="w-1/2 text-center">
           <%= f.label :avatar ,"商品圖片" ,class:"block text-md font-bold text-maingray px-2 py-1"%>
-          <%= f.file_field :avatar , class:"px-4 border-2 py-2 w-full rounded-b-lg text-sm outline-none border-gray-300 focus:border-mainorange" %> 
+          <%= f.file_field :avatar , class:"px-4 border-2 py-2 w-full rounded-b-lg text-md outline-none border-gray-300 focus:border-mainorange" %> 
         </div>
       </div>
       <div class="my-3 bg-gray-300 rounded-md">
         <%= f.label :note ,"備註" , class:"block text-md font-bold text-maingray px-2 py-1"%>
-        <%= f.text_area :note ,autofocus: true, autocomplete: "name", class:"pl-4 md:pl-0.5 px-4 w-full border-2 py-2 rounded-b-lg text-sm outline-none border-gray-300 focus:border-mainorange text-center", placeholder:"請輸入備註" %>
+        <%= f.text_area :note ,autofocus: true, autocomplete: "name", class:"pl-4 md:pl-0.5 px-4 w-full border-2 py-2 rounded-b-lg text-md outline-none border-gray-300 focus:border-mainorange text-center", placeholder:"請輸入備註" %>
       </div>
       <div class="flex justify-end mt-6">
         <%= f.submit '回菜單' , class:"mt-4 mb-3 w-full bg-gray-300 text-maingray mr-2 py-2 rounded-md transition duration-100 hover:bg-gray-200 text-center "%>
